--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 <option value="next_intraday">Next Intraday</option>
                 <option value="short_term_breakout">Short-Term Breakout</option>
                 <option value="strong_bullish_candle">Strong Bullish Candle</option>
+		<option value="strong_bullish_candle">Bullish VWAP Candle</option>
                 <option value="volume_breakout">Volume Breakout</option>
             </select>
         </div>
