--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
                 </optgroup>
                 <optgroup label="Moderately Strong Indicators">
                     <option value="bullish_momentum">Bullish Momentum</option>
+                    <option value="possible breakout">Possible Breakout</option>
                     <option value="bullish_marubozu">Bullish Marubozu</option>
                     <option value="ema_200_crossover">EMA 200 Crossover</option>
                     <option value="bollinger_band">Bollinger Band Breakout</option>
