--- a/index.html
+++ b/index.html
@@ -1943,7 +1943,12 @@ return [
 ``,
 `Learning Note: Focus on structure, risk per trade and clean reviews – not prediction.`,
 ``,
-`Disclaimer: Educational view only. Not a recommendation. Please consult a SEBI-registered advisor before making any decision.`
+`Disclaimer: This analysis is generated strictly for educational and analytical purposes only.  
+All option structures, metrics, scores, interpretations, PCR, Max Pain levels, and volatility commentary are model-based observations derived from uploaded data.  
+This does NOT constitute investment advice, trading advice, or a recommendation to buy or sell any security or derivative instrument.  
+Options trading involves substantial risk and may not be suitable for all participants.  
+Readers are advised to exercise independent judgment and consult a SEBI-registered financial advisor before taking any trading or investment decisions.  
+STWP assumes no responsibility for any financial loss arising from the use of this analysis.`
 ].join('\n');
 }
 
@@ -1992,3 +1997,4 @@ showToast._t = setTimeout(()=> toast.style.display='none',2000);
 
 </body>
 </html>
+
